Added much stuff

--- a/Ambermoon.Data.Common/Ambermoon.Data.Common.csproj
+++ b/Ambermoon.Data.Common/Ambermoon.Data.Common.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Ambermoon.Data</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ambermoon.Common\Ambermoon.Common.csproj" />
+  </ItemGroup>
+
 </Project>
