--- a/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
+++ b/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ambermoon.Data.Common" Version="1.0.4" />
     <PackageReference Include="Silk.NET.OpenGL" Version="1.3.0" />
   </ItemGroup>
 
