--- a/Ambermoon.Core/Ambermoon.Core.csproj
+++ b/Ambermoon.Core/Ambermoon.Core.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>8</LangVersion>
     <RootNamespace>Ambermoon</RootNamespace>
+    <UserSecretsId>5ff861f6-0255-427a-978a-7a8030ee8731</UserSecretsId>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>full</DebugType>
@@ -14,7 +15,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Ambermoon.Data.Common" Version="1.0.7" />
+    <PackageReference Include="Ambermoon.Data.Common" Version="1.0.12" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
