--- a/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
+++ b/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Silk.NET.OpenGL" Version="1.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ambermoon.Core\Ambermoon.Core.csproj" />
+  </ItemGroup>
+
 </Project>
