Fixed CI config bug

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ artifacts:
 
 after_build:
   - dotnet publish -c Release "%APPVEYOR_BUILD_FOLDER%\Ambermoon.net\Ambermoon.net.csproj" -p:PublishSingleFile=true -r win-x64 --no-restore
-  - 7z a AmbermoonTools-Windows.zip "%APPVEYOR_BUILD_FOLDER%\Ambermoon.net\bin\Any CPU\Release\netcoreapp3.1\win-x64\publish\Ambermoon.net.exe"
+  - 7z a Ambermoon.net-Windows.zip "%APPVEYOR_BUILD_FOLDER%\Ambermoon.net\bin\Any CPU\Release\netcoreapp3.1\win-x64\publish\Ambermoon.net.exe"
 
 test: off
 
