--- a/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
+++ b/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
@@ -10,6 +10,7 @@
 
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
