--- a/Ambermoon.net/Ambermoon.net.csproj
+++ b/Ambermoon.net/Ambermoon.net.csproj
@@ -5,7 +5,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Ambermoon</RootNamespace>
     <RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
-    <Version>1.0.19</Version>
+    <Version>1.1.0</Version>
+    <Copyright>Copyright (c) 2020 by Robert Schneckenhaus</Copyright>
+    <Company>Robert Schneckenhaus</Company>
+    <Authors>Robert Schneckenhaus</Authors>
+    <PackageProjectUrl>https://github.com/Pyrdacor/Ambermoon.net</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Pyrdacor/Ambermoon.net</RepositoryUrl>
+    <RepositoryType>github</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
