--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,26 +1,31 @@
-image: Visual Studio 2019
+environment:
+  matrix:
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      RID: win-x64
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+      RID: linux-x64
 
 platform: Any CPU
 configuration: Release
-
-install:
-  - appveyor DownloadFile https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
 
 before_build:
   - dotnet restore Ambermoon.net.sln --verbosity normal
 
 build:
+  parallel: true
   project: Ambermoon.net.sln
 
 artifacts:
   - path: Ambermoon.net-Windows.zip
     name: Ambermoon.net-Windows
+  - path: Ambermoon.net-Linux.tar.gz
+    name: Ambermoon.net-Linux
   - path: nuget\*.nupkg
     name: NugetPackages
 
 after_build:
-  - dotnet publish -c Release "%APPVEYOR_BUILD_FOLDER%\Ambermoon.net\Ambermoon.net.csproj" -p:PublishSingleFile=true -r win-x64 --no-restore
-  - 7z a Ambermoon.net-Windows.zip "%APPVEYOR_BUILD_FOLDER%\Ambermoon.net\bin\Any CPU\Release\netcoreapp3.1\win-x64\publish\Ambermoon.net.exe"
+  - dotnet publish -c Release "%APPVEYOR_BUILD_FOLDER%\Ambermoon.net\Ambermoon.net.csproj" -p:PublishSingleFile=true -r $(RID) --no-restore
+  - ps: ./pack.ps1
   - mkdir "nuget"
   - xcopy /Y /I "Ambermoon.Common\bin\Release\*.nupkg" "nuget\*"
   - xcopy /Y /I "Ambermoon.Data.Legacy\bin\Release\*.nupkg" "nuget\*"
@@ -30,7 +35,7 @@ test: off
 
 deploy:
   - provider: GitHub
-    name: Ambermoon.net-Windows
+    name: Ambermoon.net-Windows Ambermoon.net-Linux
     artifact: Ambermoon.net-Windows
     tag: $(APPVEYOR_REPO_TAG_NAME)
     release: $(APPVEYOR_REPO_TAG_NAME)
