nuget only build on Windows and fixed linux paths

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,12 +24,20 @@ artifacts:
     name: NugetPackages
 
 after_build:
-  - dotnet publish -c Release "%APPVEYOR_BUILD_FOLDER%\Ambermoon.net\Ambermoon.net.csproj" -p:PublishSingleFile=true -r %RID% --no-restore
+  - dotnet publish -c Release "%APPVEYOR_BUILD_FOLDER%/Ambermoon.net/Ambermoon.net.csproj" -p:PublishSingleFile=true -r %RID% --no-restore
   - ps: ./pack.ps1
-  - mkdir "nuget"
-  - xcopy /Y /I "Ambermoon.Common\bin\Release\*.nupkg" "nuget\*"
-  - xcopy /Y /I "Ambermoon.Data.Legacy\bin\Release\*.nupkg" "nuget\*"
-  - xcopy /Y /I "Ambermoon.Data.Common\bin\Release\*.nupkg" "nuget\*"
+
+for:
+-
+  matrix:
+    only:
+      - image: Visual Studio 2019
+
+  after_build:
+    - mkdir "nuget"
+    - xcopy /Y /I "Ambermoon.Common\bin\Release\*.nupkg" "nuget\*"
+    - xcopy /Y /I "Ambermoon.Data.Legacy\bin\Release\*.nupkg" "nuget\*"
+    - xcopy /Y /I "Ambermoon.Data.Common\bin\Release\*.nupkg" "nuget\*"
 
 test: off
 
