--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
       restoreSolution: '$(solution)'
   - task: VSBuild@1
     inputs:
-      solution: '**\*.sln'
+      solution: '**/*.sln'
     condition: contains(variables['build.sourceBranch'], 'refs/heads/master')
   - powershell: publish.ps1
     env:
