Prepared smaller sized assembly deployment

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,12 @@ artifacts:
     name: Ambermoon.net-Windows32Bit
   - path: Ambermoon.net-Linux.tar.gz
     name: Ambermoon.net-Linux
+  - path: Ambermoon.net-Windows-Standalone.zip
+    name: Ambermoon.net-Windows-Standalone
+  - path: Ambermoon.net-Windows32Bit-Standalone.zip
+    name: Ambermoon.net-Windows32Bit-Standalone
+  - path: Ambermoon.net-Linux-Standalone.tar.gz
+    name: Ambermoon.net-Linux-Standalone
   - path: nuget\*.nupkg
     name: NugetPackages
 
@@ -59,6 +65,45 @@ deploy:
   - provider: GitHub
     name: Ambermoon.net-Linux
     artifact: Ambermoon.net-Linux
+    tag: $(APPVEYOR_REPO_TAG_NAME)
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
+    auth_token:
+      secure: CP6qsCjIlyJrYsuHs4tzdrYUWOO83Jlx6/U0Gqtl/SicGmBaN1hrYUEk6RSL6D8j
+    draft: true
+    prerelease: true
+    force_update: true
+    on:
+      APPVEYOR_REPO_TAG: true
+  - provider: GitHub
+    name: Ambermoon.net-Windows-Standalone
+    artifact: Ambermoon.net-Windows-Standalone
+    tag: $(APPVEYOR_REPO_TAG_NAME)
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
+    auth_token:
+      secure: CP6qsCjIlyJrYsuHs4tzdrYUWOO83Jlx6/U0Gqtl/SicGmBaN1hrYUEk6RSL6D8j
+    draft: true
+    prerelease: true
+    force_update: true
+    on:
+      APPVEYOR_REPO_TAG: true
+  - provider: GitHub
+    name: Ambermoon.net-Windows32Bit-Standalone
+    artifact: Ambermoon.net-Windows32Bit-Standalone
+    tag: $(APPVEYOR_REPO_TAG_NAME)
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
+    auth_token:
+      secure: CP6qsCjIlyJrYsuHs4tzdrYUWOO83Jlx6/U0Gqtl/SicGmBaN1hrYUEk6RSL6D8j
+    draft: true
+    prerelease: true
+    force_update: true
+    on:
+      APPVEYOR_REPO_TAG: true
+  - provider: GitHub
+    name: Ambermoon.net-Linux-Standalone
+    artifact: Ambermoon.net-Linux-Standalone
     tag: $(APPVEYOR_REPO_TAG_NAME)
     release: $(APPVEYOR_REPO_TAG_NAME)
     description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
