Fixed use of items without charges (e.g. torch) and tooltip behavior

--- a/Ambermoon.net/Ambermoon.net.csproj
+++ b/Ambermoon.net/Ambermoon.net.csproj
@@ -20,6 +20,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Saves\**" />
+    <EmbeddedResource Remove="Saves\**" />
+    <None Remove="Saves\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="ambermoon.cfg" />
     <None Remove="Resources\IntroFont.dat" />
   </ItemGroup>
