--- a/Ambermoon.Audio.OpenAL/Ambermoon.Audio.OpenAL.csproj
+++ b/Ambermoon.Audio.OpenAL/Ambermoon.Audio.OpenAL.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Version>8.0.0</Version>
+    <Authors>Robert Schneckenhaus</Authors>
+    <Description>OpenAL audio interface implementation for Ambermoon</Description>
+    <RepositoryUrl>https://github.com/Pyrdacor/Ambermoon.net</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Pyrdacor/Ambermoon.net</PackageProjectUrl>
+    <RepositoryType>Github</RepositoryType>
+    <PackageTags>Ambermoon OpenAL Audio Sound Music</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -13,6 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ambermoon.Data.Common" Version="8.0.0" />
     <PackageReference Include="Silk.NET.OpenAL" Version="2.4.0" />
   </ItemGroup>
 
