--- a/Ambermoon.Data.Common/Ambermoon.Data.Common.csproj
+++ b/Ambermoon.Data.Common/Ambermoon.Data.Common.csproj
@@ -5,17 +5,17 @@
     <RootNamespace>Ambermoon.Data</RootNamespace>
     <Authors>Robert Schneckenhaus</Authors>
     <Description>Library that provides basic interfaces for Ambermoon data. It is used by the Ambermoon.Data.Legacy package but can also be used by other abstractions to provide the data from different sources and data types.</Description>
-    <RepositoryUrl>https://github.com/Pyrdacor/Ambermoon</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/Pyrdacor/Ambermoon</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Pyrdacor/Ambermoon.net</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Pyrdacor/Ambermoon.net</PackageProjectUrl>
     <RepositoryType>Github</RepositoryType>
     <PackageTags>Ambermoon Amiga</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>7.2.0</Version>
+    <Version>8.0.0</Version>
     <UserSecretsId>485e4790-32fd-45f1-b729-c5ca93ba0fad</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ambermoon.Common" Version="7.2.0" />
+    <PackageReference Include="Ambermoon.Common" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
