--- a/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
+++ b/Ambermoon.Renderer.OpenGL/Ambermoon.Renderer.OpenGL.csproj
@@ -10,11 +10,17 @@
 
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Version>7.2.0</Version>
+    <Version>8.0.0</Version>
+    <Authors>Robert Schneckenhaus</Authors>
+    <Description>OpenGL render interface implementation for Ambermoon</Description>
+    <PackageProjectUrl>https://github.com/Pyrdacor/Ambermoon.net</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Pyrdacor/Ambermoon.net</RepositoryUrl>
+    <RepositoryType>Github</RepositoryType>
+    <PackageTags>Ambermoon OpenGL Render Graphics Shader</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ambermoon.Data.Common" Version="7.2.0" />
+    <PackageReference Include="Ambermoon.Data.Common" Version="8.0.0" />
     <PackageReference Include="Silk.NET.OpenGL" Version="2.4.0" />
   </ItemGroup>
 
