Improved audio buffer and initialize error display

--- a/Ambermoon.Audio.OpenAL/Ambermoon.Audio.OpenAL.csproj
+++ b/Ambermoon.Audio.OpenAL/Ambermoon.Audio.OpenAL.csproj
@@ -14,7 +14,9 @@
 
   <ItemGroup>
     <PackageReference Include="Ambermoon.Data.Common" Version="8.0.0" />
-    <PackageReference Include="Silk.NET.OpenAL" Version="2.4.0" />
+    <PackageReference Include="Silk.NET.OpenAL" Version="2.5.0" />
+    <PackageReference Include="Silk.NET.OpenAL.Extensions.Soft" Version="2.5.0" />
+    <PackageReference Include="Silk.NET.OpenAL.Soft.Native" Version="1.21.1" />
   </ItemGroup>
 
   <ItemGroup>
