--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,8 @@ artifacts:
     name: Ambermoon.net-Windows32Bit
   - path: Ambermoon.net-Linux.tar.gz
     name: Ambermoon.net-Linux
+  - path: Ambermoon.net-Pi4.tar.gz
+    name: Ambermoon.net-Pi4
   - path: Ambermoon.net-Mac.zip
     name: Ambermoon.net-Mac
   - path: Ambermoon.net-Mac-Bundle.zip
@@ -35,6 +37,8 @@ artifacts:
     name: Ambermoon.net-Mac-Standalone
   - path: Ambermoon.net-Mac-Bundle-Standalone.zip
     name: Ambermoon.net-Mac-Bundle-Standalone
+  - path: Ambermoon.net-Pi4-Standalone.tar.gz
+    name: Ambermoon.net-Pi4-Standalone
   - path: nuget\*.nupkg
     name: NugetPackages
 
@@ -74,6 +78,19 @@ deploy:
   - provider: GitHub
     name: Ambermoon.net-Linux
     artifact: Ambermoon.net-Linux
+    tag: $(APPVEYOR_REPO_TAG_NAME)
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
+    auth_token:
+      secure: CP6qsCjIlyJrYsuHs4tzdrYUWOO83Jlx6/U0Gqtl/SicGmBaN1hrYUEk6RSL6D8j
+    draft: true
+    prerelease: true
+    force_update: true
+    on:
+      APPVEYOR_REPO_TAG: true
+  - provider: GitHub
+    name: Ambermoon.net-Pi4
+    artifact: Ambermoon.net-Pi4
     tag: $(APPVEYOR_REPO_TAG_NAME)
     release: $(APPVEYOR_REPO_TAG_NAME)
     description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
@@ -139,6 +156,19 @@ deploy:
   - provider: GitHub
     name: Ambermoon.net-Linux-Standalone
     artifact: Ambermoon.net-Linux-Standalone
+    tag: $(APPVEYOR_REPO_TAG_NAME)
+    release: $(APPVEYOR_REPO_TAG_NAME)
+    description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
+    auth_token:
+      secure: CP6qsCjIlyJrYsuHs4tzdrYUWOO83Jlx6/U0Gqtl/SicGmBaN1hrYUEk6RSL6D8j
+    draft: true
+    prerelease: true
+    force_update: true
+    on:
+      APPVEYOR_REPO_TAG: true
+  - provider: GitHub
+    name: Ambermoon.net-Pi4-Standalone
+    artifact: Ambermoon.net-Pi4-Standalone
     tag: $(APPVEYOR_REPO_TAG_NAME)
     release: $(APPVEYOR_REPO_TAG_NAME)
     description: 'Release $(APPVEYOR_REPO_TAG_NAME)'
