Added android workload for build pipeline

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ platform: Any CPU
 configuration: Release
 
 before_build:
+  - dotnet workload install android
   - dotnet restore Ambermoon.net.sln --verbosity normal
 
 build:
