--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,17 @@
 environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
-      BUILD_CONFIG: ReleaseWithAndroid
+      configuration: ReleaseWithAndroid
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
-      BUILD_CONFIG: Release
+      configuration: Release
     - APPVEYOR_BUILD_WORKER_IMAGE: macOS
-      BUILD_CONFIG: Release
+      configuration: Release
 
 platform: Any CPU
 configuration: $env:BUILD_CONFIG
 
 before_build:
-  - ps: if ($env:BUILD_CONFIG -eq 'ReleaseWithAndroid') { dotnet workload install android }
+  - ps: if ($env:CONFIGURATION -eq 'ReleaseWithAndroid') { dotnet workload install android }
   - dotnet restore Ambermoon.net.sln --verbosity normal
 
 build:
